--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,19 +8,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout code
+    - name: Checkout
       uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+
+    - name: Deploy
+      uses: heroku/deploy-via-github-action@v2
       with:
-        node-version: 14
-    - name: Install dependencies
-      run: npm ci
-    - name: Build
-      run: npm run build
-    - name: Deploy to Heroku
-      uses: heroku/cli@v7
-      with:
-        args: deploy
-        api-key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        app_name: moclaw-app
