--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       uses: heroku/deploy-via-github-action@v2
       with:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        app_name: moclaw-app
+        app_name: moclaw-profile
