--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"body-parser": "^1.20.1",
 		"express": "^4.18.2",
 		"geoip-lite": "^1.4.7",
+		"nodemailer": "^6.9.1",
 		"sqlite3": "^5.1.4"
 	}
 }
