--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"express": "^4.18.2",
 		"geoip-lite": "^1.4.7",
 		"nodemailer": "^6.9.1",
-		"sqlite3": "^5.1.4"
+		"sqlite3": "^5.1.4",
+		"mysql2": "^2.1.0",
+		"sequelize": "^6.12.0"
 	}
 }
