--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
 	},
 	"homepage": "https://github.com/Moclaw/nodejs-api#readme",
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"body-parser": "^1.20.1",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"express-jwt": "^8.4.1",
 		"express-list-endpoints": "^6.0.0",
 		"glob": "^10.2.3",
+		"joi": "^17.9.2",
 		"mysql2": "^2.1.0",
 		"sequelize": "^6.12.0",
 		"socket.io": "^4.6.1",
